force-app/main/default/objects/SFDC_Competitor_Role__c/SFDC_Competitor_Role__c.object-meta.xml
<CustomObject>
    <description>Connector object that associates one or more Competitors to the Conferences at which they will have a presence.</description>
    <label>Competitor Role</label>
    <nameField>
        <displayFormat>COMP-{000000}</displayFormat>
        <label>Competitor Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>