force-app/main/default/objects/SFDC_Competitor_Role__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N40000001U8NNEA0</relationshipName>
    <type>Lookup</type>
</CustomField>