force-app/main/default/objects/SFDC_Competitor_Role__c/fields/Primary_Conference_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Conference_Role__c</fullName>
    <label>Primary Conference Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attendee</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>