force-app/main/default/objects/SFDC_Competitor_Role__c/fields/SFDC_Conference__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Conference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conference Attended</label>
    <referenceTo>SFDC_Conference__c</referenceTo>
    <relationshipName>R00N40000001U8NMEA0</relationshipName>
    <type>Lookup</type>
</CustomField>